# QATzip

./: .gitignore  LICENSE  Makefile.am  Makefile.init  README.md  SECURITY.md  autogen.sh  configure  configure.ac  qatzip.pc.in  qatzip.spec  qatzip.spec.in  setenv.sh  specgen.sh
.github/: CODEOWNERS
config_file/: LICENSE.BSD  LICENSE.GPL
config_file/4xxx/multiple_process_opt/: 4xxx_dev0.conf  4xxx_dev1.conf  4xxx_dev3.conf  4xxx_dev4.conf  4xxx_dev5.conf
config_file/4xxx/multiple_thread_opt/: 4xxx_dev4.conf  4xxx_dev5.conf  4xxx_dev6.conf  4xxx_dev7.conf
config_file/c3xxx/multiple_process_opt/: c3xxx_dev0.conf
config_file/c3xxx/multiple_thread_opt/: c3xxx_dev0.conf
config_file/c6xx/multiple_process_opt/: c6xx_dev0.conf  c6xx_dev2.conf
config_file/c6xx/multiple_thread_opt/: c6xx_dev0.conf  c6xx_dev1.conf  c6xx_dev2.conf
config_file/dh895xcc/multiple_process_opt/: dh895xcc_dev0.conf
config_file/dh895xcc/multiple_thread_opt/: dh895xcc_dev0.conf
dockerfiles/: Dockerfile  README.md
examples/: Makefile  README.md  compress_gzip.c  compress_lz4.c  decompress_gzip.c  decompress_lz4.c
include/: qatzip.h  qatzipP.h  qz_utils.h
man/: qatzip-test.1  qzip.1
src/: Makefile  Makefile.am  qatzip.c  qatzip_counter.c  qatzip_gzip.c  qatzip_internal.h  qatzip_lz4.c  qatzip_mem.c  qatzip_page_table.h  qatzip_stream.c  qatzip_sw.c  qatzip_utils.c  xxhash.c  xxhash.h
test/: Makefile  Makefile.am  README.md  bt.c  main.c
test/code_format_tests/: astylerc  format.sh
test/functional_tests/: run_test_ascii.sh  run_test_chunksz.sh  run_test_cnvr.sh  run_test_decompressStream_with_BufferError.sh  run_test_decompress_combined_file.sh  run_test_early_HW_detection.sh  run_test_fork_resource_check.sh  run_test_hugepage.sh  run_test_long.sh  run_test_multi_process.sh  run_test_quick.sh  run_test_qzInit.sh  run_test_readfiles.sh  run_test_sw.sh  run_test_symlink.sh  run_test_threading.sh  run_test_threadsafety.sh  run_test_try_HW_decom_for_GZIP_header.sh
test/performance_tests/: run_perf_test.sh
test/performance_tests/config_file/4xxx/: 4xxx_dev0.conf  4xxx_dev3.conf  4xxx_dev4.conf  4xxx_dev6.conf  4xxx_dev7.conf
test/performance_tests/config_file/c3xxx/: c3xxx_dev0.conf
test/performance_tests/config_file/c4xxx/: c4xxx_dev0.conf
test/performance_tests/config_file/c6xx/: c6xx_dev0.conf  c6xx_dev1.conf  c6xx_dev2.conf
test/performance_tests/config_file/dh895xcc/: dh895xcc_dev0.conf
utils/: Makefile  Makefile.am  qzip.c  qzip.h  qzip_7z.c  qzip_main.c  qzstd.c  qzstd.h  qzstd_main.c
